# rfq-comparison-tool

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  README.md  REAMDE.md  pyproject.toml
backend/app/: main.py
backend/app/ai/: llm.py  registry.py
backend/app/ai/agents/procurement_assistant/: __init__.py  agent.py  prompts.py
backend/app/ai/agents/procurement_orchestrator/: __init__.py  agent.py  prompts.py
backend/app/ai/agents/quote_extraction/: __init__.py  graph.py  prompts.py  schemas.py  state.py
backend/app/ai/agents/rfq_assistant/: __init__.py  agent.py  prompts.py
backend/app/ai/agents/supplier_mailer/: __init__.py  agent.py  prompts.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py
backend/app/features/chat/: mailer.py  router.py  schema.py  service.py
backend/app/features/quote/: agent.py  csv_service.py  model.py  pdf_service.py  prompts.py  router.py  schema.py  service.py  tools.py
backend/app/features/quote/importers/: __init__.py  csv_importer.py  pdf_importer.py
backend/app/features/rfq/: model.py  router.py  schema.py  service.py
backend/tests/: conftest.py  test_chat.py  test_csv_import.py  test_quote.py  test_rfq.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: axios.js  quote.js  rfq.js
frontend/src/components/: ConfirmModal.jsx  CsvUpload.jsx  EmptyState.jsx  (+10 more)
(+36 files in other folders)
