[project]
name = "supplier-quote-comparison-tool"
version = "0.1.0"
description = "FastAPI backend for Supplier Quote Comparison Tool"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.41",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-multipart>=0.0.20",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
