[project]
name = "supplier-quote-comparison-tool"
version = "0.1.0"
description = "FastAPI backend for Supplier Quote Comparison Tool"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.41",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-multipart>=0.0.20",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "openai>=1.93.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
